# papyrus-compiler

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.RU.md  README.md  build compiler prod.bat  build compiler.bat  build ls prod.bat  build ls.bat  build.bat  compile RH project.bat  compile test scripts.bat  compiler.v  doc.md  fast.v  fast_main.js  flake.nix  footer.html  header.html  index.html  v.mod  vm.v
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: ci.yml  manual-release.yml
builtin/: ObjectReference.psc
compiler/: papyrus.v
compiler/builtin/: Actor.psc  Cell.psc  Form.psc  Game.psc  ObjectReference.psc  Potion.psc
docs/Skyrim/: number of object inheritances.md  number of papyrus function calls (native only).md  number of papyrus function calls.md  papyrus script stats.md
fast-assets/: header.html  index.html  main.js  style.css  table.html
language server/: main.v  stdio.v  v.mod
modules/builder/: builder.v  builder_test.v  cache.v  original.v  pex.v  stats.v  v.v
modules/lsp/: lsp.v
modules/pex/: binary.v  binary_test.v  dump.v  pex.v  print.v  reader.v  rw_test.v  str.v  writer.v
modules/pex2headers/: pex2headers.v
vm/: CMakeLists.txt
vm/papyrus_vm_lib/: ActivePexInstance.cpp  Structures.h  VarValue.cpp  VirtualMachine.h
vm/unit/: ScriptVariablesHolder.cpp  ScriptVariablesHolder.h  VarValueTest.h  VirtualMachineTest.h  main.cpp
vscode-extension/: .gitignore  .vscodeignore  README.md  language-configuration.json  package.json  tsconfig.json  webpack.config.js
(+269 files in other folders)
